made popup look nicer

--- a/popup.html
+++ b/popup.html
@@ -8,14 +8,19 @@
 
     <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.6.0/pure-min.css">
     <link rel="stylesheet" href="css/main.css">
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Chewy' rel='stylesheet' type='text/css'>
 
 </head>
     <body>
         <div class="mylk-banner">
-            <div class="text">
-                <h1>Before you check out, consider donating $5 to help</h1>
+            <div class="mylk-logo">
+                mylk
             </div>
-           <a class="pure-button button-donate " href="https://api.venmo.com/v1/oauth/authorize?client_id=2713&scope=make_payments" target="_blank">DONATE
+            <div class="text">
+                Before you check out, consider donating $5 to help
+            </div>
+           <a class="pure-button button-donate " href="https://api.venmo.com/v1/oauth/authorize?client_id=2713&scope=make_payments" target="_blank">Donate
             </a>
 
         </div>
