--- a/popup.html
+++ b/popup.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="css/main.css">
     <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Chewy' rel='stylesheet' type='text/css'>
+    <script type="text/javascript" src="js/jquery/jquery.min.js"></script>
     <script type="text/javascript" src="src/inject/inject.js"></script>
     <script type="text/javascript" src="popup.js"></script>
 
